--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -5,3 +5,46 @@ tile.crazyores_core:copper_ore.name=Copper Ore
 
 # TAB LOCALIZATION
 itemGroup.blocks=CrazyOres Blocks
+
+# CONFIG LOCALIZATION
+config.category.worldGeneration=world_generation
+
+config.node.generateAllOres=Generate_All_Ores
+config.node.generateCopperOre=Generate_Copper_Ore
+config.node.generateSapphireOre=Generate_Sapphire_Ore
+config.node.generateAdamiteOre=Generate_Adamite_Ore
+config.node.generateMeteoriteOre=Generate_Meteorite_Ore
+config.node.generateRubyOre=Generate_Ruby_Ore
+config.node.generateFoolsRubyOre=Generate_Fools_Ruby_Ore
+config.node.generateZectiumOre=Generate_Zectium_Ore
+config.node.generateTapaziteOre=Generate_Tapazite_Ore
+config.node.generateCrystalOre=Generate_Crystal_Ore
+config.node.generateOsmoniumOre=Generate_Osmonium_Ore
+config.node.generateStarconiumOre=Generate_Starconium_Ore
+config.node.generateDemoniteStone=Generate_Demonite_Stone
+config.node.generateExperiumOre=Generate_Experium_Ore
+config.node.generateInvisiumOre=Generate_Invisium_Ore
+config.node.generateDarkStone=Generate_DarkStone
+config.node.generateLuminiteOre=Generate_Luminite_Ore
+config.node.generateEnderOre=Generate_Ender_Ore
+config.node.generateUltraOre=Generate_Ultra_Ore
+
+config.comment.generateAllOres=When set to true, all CO ores will be generated in new chunks. Set to false to stop CO ores from spawning in new chunks.
+config.comment.generateCopperOre=When set to true, Copper Ore will be generated in new chunks. Set to false to stop Copper Ore from spawning in new chunks.
+config.comment.generateSapphireOre=When set to true, Sapphire Ore will be generated in new chunks. Set to false to stop Sapphire Ore from spawning in new chunks.
+config.comment.generateAdamiteOre=When set to true, Adamite Ore will be generated in new chunks. Set to false to stop Adamite Ore from spawning in new chunks.
+config.comment.generateMeteoriteOre=When set to true, Meteorite Ore will be generated in new chunks. Set to false to stop Meteorite Ore from spawning in new chunks.
+config.comment.generateRubyOre=When set to true, Ruby Ore will be generated in new chunks. Set to false to stop Ruby Ore from spawning in new chunks.
+config.comment.generateFoolsRubyOre=When set to true, Fool's Ruby Ore will be generated in new chunks. Set to false to stop Fool's Ruby Ore from spawning in new chunks.
+config.comment.generateZectiumOre=When set to true, Zectium Ore will be generated in new chunks. Set to false to stop Zectium Ore from spawning in new chunks.
+config.comment.generateTapaziteOre=When set to true, Tapazite Ore will be generated in new chunks. Set to false to stop Tapazite Ore from spawning in new chunks.
+config.comment.generateCrystalOre=When set to true, Crystal Ore will be generated in new chunks. Set to false to stop Crystal Ore from spawning in new chunks.
+config.comment.generateOsmoniumOre=When set to true, Osmonium Ore will be generated in new chunks. Set to false to stop Osmonium Ore from spawning in new chunks.
+config.comment.generateStarconiumOre=When set to true, Starconium Ore will be generated in new chunks. Set to false to stop Starconium Ore from spawning in new chunks.
+config.comment.generateDemoniteStone=When set to true, Demonite Stone will be generated in new chunks. Set to false to stop Demonite Stone from spawning in new chunks.
+config.comment.generateExperiumOre=When set to true, Experium Ore will be generated in new chunks. Set to false to stop Experium Ore from spawning in new chunks.
+config.comment.generateInvisiumOre=When set to true, Invisium Ore will be generated in new chunks. Set to false to stop Invisium Ore from spawning in new chunks.
+config.comment.generateDarkStone=When set to true, DarkStone will be generated in new chunks. Set to false to stop DarkStone from spawning in new chunks.
+config.comment.generateLuminiteOre=When set to true, Luminite Ore will be generated in new chunks. Set to false to stop Luminite Ore from spawning in new chunks.
+config.comment.generateEnderOre=When set to true, Ender Ore will be generated in new chunks. Set to false to stop Ender Ore from spawning in new chunks.
+config.comment.generateUltraOre=When set to true, Ultra Ore will be generated in new chunks. Set to false to stop Ultra Ore from spawning in new chunks.
