--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -1,7 +1,24 @@
 # CRAZYORES CORE ENGLISH LANGUAGE LOCALIZATION FILE (Last update - V2.0.0)
 
 # BLOCK LOCALIZATION
+tile.crazyores_core:fools_ruby_ore.name=Fool's Ruby Ore
+tile.crazyores_core:meteorite_ore.name=Meteorite Ore
 tile.crazyores_core:copper_ore.name=Copper Ore
+tile.crazyores_core:sapphire_ore.name=Sapphire Ore
+tile.crazyores_core:adamite_ore.name=Adamite Ore
+tile.crazyores_core:ruby_ore.name=Ruby Ore
+tile.crazyores_core:zectium_ore.name=Zectium Ore
+tile.crazyores_core:tapazite_ore.name=Tapazite Ore
+tile.crazyores_core:crystal_ore.name=Crystal Ore
+tile.crazyores_core:osmonium_ore.name=Osmonium Ore
+tile.crazyores_core:starconium_ore.name=Starconium Ore
+tile.crazyores_core:experium_ore.name=Experium Ore
+tile.crazyores_core:demonite_ore.name=Demonite Ore
+tile.crazyores_core:invisium_ore.name=Invisium Ore
+tile.crazyores_core:ender_ore.name=Ender Ore
+tile.crazyores_core:ultra_ore.name=Ultra Ore
+tile.crazyores_core:luminite_ore.name=Luminite Ore
+tile.crazyores_core:darkstone.name=Darkstone
 
 # TAB LOCALIZATION
 itemGroup.blocks=CrazyOres Blocks
