Fixed some config localization/names... Demonite Stone -> Demonite Ore, DarkStone -> Darkstone

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -38,10 +38,10 @@ config.node.generateTapaziteOre=Generate_Tapazite_Ore
 config.node.generateCrystalOre=Generate_Crystal_Ore
 config.node.generateOsmoniumOre=Generate_Osmonium_Ore
 config.node.generateStarconiumOre=Generate_Starconium_Ore
-config.node.generateDemoniteStone=Generate_Demonite_Stone
+config.node.generateDemoniteOre=Generate_Demonite_Ore
 config.node.generateExperiumOre=Generate_Experium_Ore
 config.node.generateInvisiumOre=Generate_Invisium_Ore
-config.node.generateDarkStone=Generate_DarkStone
+config.node.generateDarkstone=Generate_Darkstone
 config.node.generateLuminiteOre=Generate_Luminite_Ore
 config.node.generateEnderOre=Generate_Ender_Ore
 config.node.generateUltraOre=Generate_Ultra_Ore
@@ -58,10 +58,10 @@ config.comment.generateTapaziteOre=When set to true, Tapazite Ore will be genera
 config.comment.generateCrystalOre=When set to true, Crystal Ore will be generated in new chunks. Set to false to stop Crystal Ore from spawning in new chunks.
 config.comment.generateOsmoniumOre=When set to true, Osmonium Ore will be generated in new chunks. Set to false to stop Osmonium Ore from spawning in new chunks.
 config.comment.generateStarconiumOre=When set to true, Starconium Ore will be generated in new chunks. Set to false to stop Starconium Ore from spawning in new chunks.
-config.comment.generateDemoniteStone=When set to true, Demonite Stone will be generated in new chunks. Set to false to stop Demonite Stone from spawning in new chunks.
+config.comment.generateDemoniteOre=When set to true, Demonite Ore will be generated in new chunks. Set to false to stop Demonite Ore from spawning in new chunks.
 config.comment.generateExperiumOre=When set to true, Experium Ore will be generated in new chunks. Set to false to stop Experium Ore from spawning in new chunks.
 config.comment.generateInvisiumOre=When set to true, Invisium Ore will be generated in new chunks. Set to false to stop Invisium Ore from spawning in new chunks.
-config.comment.generateDarkStone=When set to true, DarkStone will be generated in new chunks. Set to false to stop DarkStone from spawning in new chunks.
+config.comment.generateDarkstone=When set to true, Darkstone will be generated in new chunks. Set to false to stop Darkstone from spawning in new chunks.
 config.comment.generateLuminiteOre=When set to true, Luminite Ore will be generated in new chunks. Set to false to stop Luminite Ore from spawning in new chunks.
 config.comment.generateEnderOre=When set to true, Ender Ore will be generated in new chunks. Set to false to stop Ender Ore from spawning in new chunks.
 config.comment.generateUltraOre=When set to true, Ultra Ore will be generated in new chunks. Set to false to stop Ultra Ore from spawning in new chunks.
