Lots of stuff done. Removed Invisium comment in COItem. Changed all item and block variable names to the new conventional MC style to prevent thousands of warnings from FML. Added basic Ore Dictionary support. Fixed up CO Materials tab. darkstone_ore -> darkstone. Restructured BlockList.

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -44,6 +44,7 @@ item.crazyores_core:white_luminite_crystal.name=White Luminite Crystal
 
 # TAB LOCALIZATION
 itemGroup.blocks=CrazyOres Blocks
+itemGroup.materials=CrazyOres Materials
 
 # CONFIG LOCALIZATION
 config.category.worldGeneration=world_generation
