Added some new blocks for the dimension, changed the sunset color, changed some generation code to add the new blocks, and provided some code to help with multiple biomes in the future.

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -1,80 +1,85 @@
 # CRAZYORES CORE ENGLISH LANGUAGE LOCALIZATION FILE (Last update - V2.0.0)
 
 # BLOCK LOCALIZATION
-tile.crazyores_core:fools_ruby_ore.name=Fool's Ruby Ore
-tile.crazyores_core:meteorite_ore.name=Meteorite Ore
-tile.crazyores_core:copper_ore.name=Copper Ore
-tile.crazyores_core:experium_ore.name=Experium Ore
-tile.crazyores_core:sapphire_ore.name=Sapphire Ore
-tile.crazyores_core:adamite_ore.name=Adamite Ore
-tile.crazyores_core:invisium_ore.name=Invisium Ore
-tile.crazyores_core:ruby_ore.name=Ruby Ore
-tile.crazyores_core:darkstone.name=Darkstone
-tile.crazyores_core:zectium_ore.name=Zectium Ore
-tile.crazyores_core:luminite_ore.name=Luminite Ore
-tile.crazyores_core:tapazite_ore.name=Tapazite Ore
-tile.crazyores_core:demonite_ore.name=Demonite Ore
-tile.crazyores_core:osmonium_ore.name=Osmonium Ore
-tile.crazyores_core:starconium_ore.name=Starconium Ore
-tile.crazyores_core:ender_ore.name=Ender Ore
-tile.crazyores_core:ultra_ore.name=Ultra Ore
+tile.fools_ruby_ore.name=Fool's Ruby Ore
+tile.meteorite_ore.name=Meteorite Ore
+tile.copper_ore.name=Copper Ore
+tile.experium_ore.name=Experium Ore
+tile.sapphire_ore.name=Sapphire Ore
+tile.adamite_ore.name=Adamite Ore
+tile.invisium_ore.name=Invisium Ore
+tile.ruby_ore.name=Ruby Ore
+tile.darkstone.name=Darkstone
+tile.zectium_ore.name=Zectium Ore
+tile.luminite_ore.name=Luminite Ore
+tile.tapazite_ore.name=Tapazite Ore
+tile.demonite_ore.name=Demonite Ore
+tile.osmonium_ore.name=Osmonium Ore
+tile.starconium_ore.name=Starconium Ore
+tile.ender_ore.name=Ender Ore
+tile.ultra_ore.name=Ultra Ore
 
-tile.crazyores_core:fools_ruby_storage_block.name=Fool's Ruby Storage Block
-tile.crazyores_core:meteorite_storage_block.name=Meteorite Storage Block
-tile.crazyores_core:copper_storage_block.name=Copper Storage Block
-tile.crazyores_core:experium_storage_block.name=Experium Storage Block
-tile.crazyores_core:sapphire_storage_block.name=Sapphire Storage Block
-tile.crazyores_core:adamite_storage_block.name=Adamite Storage Block
-tile.crazyores_core:invisium_storage_block.name=Invisium Storage Block
-tile.crazyores_core:ruby_storage_block.name=Ruby Storage Block
-tile.crazyores_core:darkstone_storage_block.name=Darkstone Storage Block
-tile.crazyores_core:zectium_storage_block.name=Zectium Storage Block
-tile.crazyores_core:luminite_storage_block_white.name=White Luminite Storage Block
-tile.crazyores_core:luminite_storage_block_red.name=Red Luminite Storage Block
-tile.crazyores_core:luminite_storage_block_orange.name=Orange Luminite Storage Block
-tile.crazyores_core:luminite_storage_block_yellow.name=Yellow Luminite Storage Block
-tile.crazyores_core:luminite_storage_block_green.name=Green Luminite Storage Block
-tile.crazyores_core:luminite_storage_block_purple.name=Purple Luminite Storage Block
-tile.crazyores_core:luminite_storage_block_blue.name=Blue Luminite Storage Block
-tile.crazyores_core:luminite_storage_block_black.name=Black Luminite Storage Block
-tile.crazyores_core:tapazite_storage_block.name=Tapazite Storage Block
-tile.crazyores_core:demonite_storage_block.name=Demonite Storage Block
-tile.crazyores_core:osmonium_storage_block.name=Osmonium Storage Block
-tile.crazyores_core:starconium_storage_block.name=Starconium Storage Block
-tile.crazyores_core:ender_storage_block.name=Ender Storage Block
-tile.crazyores_core:ultra_storage_block.name=Ultra Storage Block
+tile.fools_ruby_storage_block.name=Fool's Ruby Storage Block
+tile.meteorite_storage_block.name=Meteorite Storage Block
+tile.copper_storage_block.name=Copper Storage Block
+tile.experium_storage_block.name=Experium Storage Block
+tile.sapphire_storage_block.name=Sapphire Storage Block
+tile.adamite_storage_block.name=Adamite Storage Block
+tile.invisium_storage_block.name=Invisium Storage Block
+tile.ruby_storage_block.name=Ruby Storage Block
+tile.darkstone_storage_block.name=Darkstone Storage Block
+tile.zectium_storage_block.name=Zectium Storage Block
+tile.luminite_storage_block_white.name=White Luminite Storage Block
+tile.luminite_storage_block_red.name=Red Luminite Storage Block
+tile.luminite_storage_block_orange.name=Orange Luminite Storage Block
+tile.luminite_storage_block_yellow.name=Yellow Luminite Storage Block
+tile.luminite_storage_block_green.name=Green Luminite Storage Block
+tile.luminite_storage_block_purple.name=Purple Luminite Storage Block
+tile.luminite_storage_block_blue.name=Blue Luminite Storage Block
+tile.luminite_storage_block_black.name=Black Luminite Storage Block
+tile.tapazite_storage_block.name=Tapazite Storage Block
+tile.demonite_storage_block.name=Demonite Storage Block
+tile.osmonium_storage_block.name=Osmonium Storage Block
+tile.starconium_storage_block.name=Starconium Storage Block
+tile.ender_storage_block.name=Ender Storage Block
+tile.ultra_storage_block.name=Ultra Storage Block
+
+tile.test_portal.name=Test Portal Block
+tile.crazyhills_grass.name=Golden Grass
+tile.crazyhills_dirt.name=Dirt
+tile.crazyhills_stone.name=Dreamstone
 
 # ITEM LOCALIZATION
-item.crazyores_core:fools_ruby_mush.name=Fool's Ruby Mush
-item.crazyores_core:fools_ruby_gem.name=Fool's Ruby Gem
-item.crazyores_core:meteorite_coal.name=Meteorite Coal
-item.crazyores_core:meteorite_gem.name=Meteorite Gem
-item.crazyores_core:copper_ingot.name=Copper Ingot
-item.crazyores_core:experium_orb.name=Experium Orb
-item.crazyores_core:sapphire_gem.name=Sapphire Gem
-item.crazyores_core:adamite_shard.name=Adamite Shard
-item.crazyores_core:invisium_ingot.name=Invisium Ingot
-item.crazyores_core:ruby_gem.name=Ruby Gem
-item.crazyores_core:darkstone_ingot.name=Darkstone Ingot
-item.crazyores_core:zectium_ingot.name=Zectium Ingot
-item.crazyores_core:luminite_crystal_white.name=White Luminite Crystal
-item.crazyores_core:luminite_crystal_red.name=Red Luminite Crystal
-item.crazyores_core:luminite_crystal_orange.name=Orange Luminite Crystal
-item.crazyores_core:luminite_crystal_yellow.name=Yellow Luminite Crystal
-item.crazyores_core:luminite_crystal_green.name=Green Luminite Crystal
-item.crazyores_core:luminite_crystal_blue.name=Blue Luminite Crystal
-item.crazyores_core:luminite_crystal_purple.name=Purple Luminite Crystal
-item.crazyores_core:luminite_crystal_black.name=Black Luminite Crystal
-item.crazyores_core:tapazite_gem.name=Tapazite Gem
-item.crazyores_core:demonite_orb.name=Demonite Orb
-item.crazyores_core:crystal_shard.name=Crystal Shard
-item.crazyores_core:osmonium_ingot.name=Osmonium Ingot
-item.crazyores_core:starconium_gem.name=Starconium Gem
-item.crazyores_core:ender_gem.name=Ender Gem
-item.crazyores_core:ultra_gem.name=Ultra Gem
+item.fools_ruby_mush.name=Fool's Ruby Mush
+item.fools_ruby_gem.name=Fool's Ruby Gem
+item.meteorite_coal.name=Meteorite Coal
+item.meteorite_gem.name=Meteorite Gem
+item.copper_ingot.name=Copper Ingot
+item.experium_orb.name=Experium Orb
+item.sapphire_gem.name=Sapphire Gem
+item.adamite_shard.name=Adamite Shard
+item.invisium_ingot.name=Invisium Ingot
+item.ruby_gem.name=Ruby Gem
+item.darkstone_ingot.name=Darkstone Ingot
+item.zectium_ingot.name=Zectium Ingot
+item.luminite_crystal_white.name=White Luminite Crystal
+item.luminite_crystal_red.name=Red Luminite Crystal
+item.luminite_crystal_orange.name=Orange Luminite Crystal
+item.luminite_crystal_yellow.name=Yellow Luminite Crystal
+item.luminite_crystal_green.name=Green Luminite Crystal
+item.luminite_crystal_blue.name=Blue Luminite Crystal
+item.luminite_crystal_purple.name=Purple Luminite Crystal
+item.luminite_crystal_black.name=Black Luminite Crystal
+item.tapazite_gem.name=Tapazite Gem
+item.demonite_orb.name=Demonite Orb
+item.crystal_shard.name=Crystal Shard
+item.osmonium_ingot.name=Osmonium Ingot
+item.starconium_gem.name=Starconium Gem
+item.ender_gem.name=Ender Gem
+item.ultra_gem.name=Ultra Gem
 
-item.crazyores_core:fools_ruby_mush.name=Fool's Ruby Mush
-item.crazyores_core:starconium_shard.name=Starconium Shard
+item.fools_ruby_mush.name=Fool's Ruby Mush
+item.starconium_shard.name=Starconium Shard
 
 # TAB LOCALIZATION
 itemGroup.blocks=CrazyOres Blocks
