Fixed Item names to show correctly. Made ores drop their correct items/blocks. Made Golden Arrevia Grass responsive to its surroundings in order to make it change to dirt or dirt to grass. Changed world generation for the crazy hills biome and will continue to explore with world generation in the future.

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -45,9 +45,9 @@ tile.ender_storage_block.name=Ender Storage Block
 tile.ultra_storage_block.name=Ultra Storage Block
 
 tile.test_portal.name=Test Portal Block
-tile.crazyhills_grass.name=Golden Grass
+tile.crazyhills_grass.name=Golden Arrevia
 tile.crazyhills_dirt.name=Dirt
-tile.crazyhills_stone.name=Dreamstone
+tile.crazyhills_stone.name=Stone
 
 # ITEM LOCALIZATION
 item.fools_ruby_mush.name=Fool's Ruby Mush
