Added tapazite crystal to the game. Doesn't have a custom model, but the implementation works and is using a place holder model. Added support for entity registration and rendering. Excited to be moving forward.

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -1,53 +1,53 @@
 # CRAZYORES CORE ENGLISH LANGUAGE LOCALIZATION FILE (Last update - V2.0.0)
 
 # BLOCK LOCALIZATION
-tile.fools_ruby_ore.name=Fool's Ruby Ore
-tile.meteorite_ore.name=Meteorite Ore
-tile.copper_ore.name=Copper Ore
-tile.experium_ore.name=Experium Ore
-tile.sapphire_ore.name=Sapphire Ore
-tile.adamite_ore.name=Adamite Ore
-tile.invisium_ore.name=Invisium Ore
-tile.ruby_ore.name=Ruby Ore
-tile.darkstone.name=Darkstone
-tile.zectium_ore.name=Zectium Ore
-tile.luminite_ore.name=Luminite Ore
-tile.tapazite_ore.name=Tapazite Ore
-tile.demonite_ore.name=Demonite Ore
-tile.osmonium_ore.name=Osmonium Ore
-tile.starconium_ore.name=Starconium Ore
-tile.ender_ore.name=Ender Ore
-tile.ultra_ore.name=Ultra Ore
+fools_ruby_ore.name=Fool's Ruby Ore
+meteorite_ore.name=Meteorite Ore
+copper_ore.name=Copper Ore
+experium_ore.name=Experium Ore
+sapphire_ore.name=Sapphire Ore
+adamite_ore.name=Adamite Ore
+invisium_ore.name=Invisium Ore
+ruby_ore.name=Ruby Ore
+darkstone.name=Darkstone
+zectium_ore.name=Zectium Ore
+luminite_ore.name=Luminite Ore
+tapazite_ore.name=Tapazite Ore
+demonite_ore.name=Demonite Ore
+osmonium_ore.name=Osmonium Ore
+starconium_ore.name=Starconium Ore
+ender_ore.name=Ender Ore
+ultra_ore.name=Ultra Ore
 
-tile.fools_ruby_storage_block.name=Fool's Ruby Storage Block
-tile.meteorite_storage_block.name=Meteorite Storage Block
-tile.copper_storage_block.name=Copper Storage Block
-tile.experium_storage_block.name=Experium Storage Block
-tile.sapphire_storage_block.name=Sapphire Storage Block
-tile.adamite_storage_block.name=Adamite Storage Block
-tile.invisium_storage_block.name=Invisium Storage Block
-tile.ruby_storage_block.name=Ruby Storage Block
-tile.darkstone_storage_block.name=Darkstone Storage Block
-tile.zectium_storage_block.name=Zectium Storage Block
-tile.luminite_storage_block_white.name=White Luminite Storage Block
-tile.luminite_storage_block_red.name=Red Luminite Storage Block
-tile.luminite_storage_block_orange.name=Orange Luminite Storage Block
-tile.luminite_storage_block_yellow.name=Yellow Luminite Storage Block
-tile.luminite_storage_block_green.name=Green Luminite Storage Block
-tile.luminite_storage_block_purple.name=Purple Luminite Storage Block
-tile.luminite_storage_block_blue.name=Blue Luminite Storage Block
-tile.luminite_storage_block_black.name=Black Luminite Storage Block
-tile.tapazite_storage_block.name=Tapazite Storage Block
-tile.demonite_storage_block.name=Demonite Storage Block
-tile.osmonium_storage_block.name=Osmonium Storage Block
-tile.starconium_storage_block.name=Starconium Storage Block
-tile.ender_storage_block.name=Ender Storage Block
-tile.ultra_storage_block.name=Ultra Storage Block
+fools_ruby_storage_block.name=Fool's Ruby Storage Block
+meteorite_storage_block.name=Meteorite Storage Block
+copper_storage_block.name=Copper Storage Block
+experium_storage_block.name=Experium Storage Block
+sapphire_storage_block.name=Sapphire Storage Block
+adamite_storage_block.name=Adamite Storage Block
+invisium_storage_block.name=Invisium Storage Block
+ruby_storage_block.name=Ruby Storage Block
+darkstone_storage_block.name=Darkstone Storage Block
+zectium_storage_block.name=Zectium Storage Block
+luminite_storage_block_white.name=White Luminite Storage Block
+luminite_storage_block_red.name=Red Luminite Storage Block
+luminite_storage_block_orange.name=Orange Luminite Storage Block
+luminite_storage_block_yellow.name=Yellow Luminite Storage Block
+luminite_storage_block_green.name=Green Luminite Storage Block
+luminite_storage_block_purple.name=Purple Luminite Storage Block
+luminite_storage_block_blue.name=Blue Luminite Storage Block
+luminite_storage_block_black.name=Black Luminite Storage Block
+tapazite_storage_block.name=Tapazite Storage Block
+demonite_storage_block.name=Demonite Storage Block
+osmonium_storage_block.name=Osmonium Storage Block
+starconium_storage_block.name=Starconium Storage Block
+ender_storage_block.name=Ender Storage Block
+ultra_storage_block.name=Ultra Storage Block
 
-tile.test_portal.name=Test Portal Block
-tile.crazyhills_grass.name=Golden Arrevia
-tile.crazyhills_dirt.name=Dirt
-tile.crazyhills_stone.name=Stone
+test_portal.name=Test Portal Block
+arrevia_grass.name=Golden Arrevia
+crazyhills_dirt.name=Dirt
+crazyhills_stone.name=Stone
 
 # ITEM LOCALIZATION
 item.fools_ruby_mush.name=Fool's Ruby Mush
