Added tapazite stalagmites and stalactites! They grow and spawn others randomly around them! I still need to make the proper models for them, but as of now, they still look pretty epic. Next thing to fix is to make it so that they can spawn others around them on the y axis too, and make it so that they generate in the world randomly.

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -46,6 +46,9 @@ ultra_storage_block.name=Ultra Storage Block
 
 test_portal.name=Test Portal Block
 arrevia_grass.name=Golden Arrevia
+
+tapazite_crystal=Tapazite Crystal
+
 crazyhills_dirt.name=Dirt
 crazyhills_stone.name=Stone
 
