Fixed item name glitch and added a class for TapaziteObelisks.

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -69,6 +69,8 @@ tapazite_stalactite_4.name=Tapazite Stalactite Phase 5
 tapazite_stalactite_5.name=Tapazite Stalactite Phase 6
 tapazite_stalactite_6.name=Tapazite Stalactite Phase 7
 
+tapaziteObelisk.name=Tapazite Obelisk
+
 # TAB LOCALIZATION
 itemGroup.overworldBlocks=CO Overworld Blocks
 itemGroup.overworldItems=CO Overworld Items
